--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
+    "@stitches/react": "^1.2.8",
+    "@use-gesture/react": "^10.2.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
