--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stitches/react": "^1.2.8",
     "@use-gesture/react": "^10.2.27",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
